--- a/index.html
+++ b/index.html
@@ -1,15 +1,335 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="libs/w2ui/w2ui-1.5.rc1.min.css" />
+    <script src="libs/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="libs/w2ui/w2ui-1.5.rc1.min.js"></script>
+     <script type="text/javascript" src="libs/bmob-min.js"></script>
+  
+</head>
+<body>
+    <div id="myLayout" style="height:800px;width:100%"></div>
+</body>
+<script>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta http-equiv="refresh" content="0;URL=docs/" />
+  //  var Bmob = require('libs/Bmob-1.4.2.min.js');
 
-        <title>OpenLayers Explorer</title>
-    </head>
+   // 初始化
+    Bmob.initialize("2465744a3e089f92acc7d6a25e4b7c85", "f2ab910ec0789f63f9cb1aba5fb00b35");
 
-    <body>
-    </body>
+
+    var jsonArray = [];
+
+    $(function () {
+
+        var unit = Bmob.Object.extend("unit");
+        var query = new Bmob.Query(unit);
+         jsonArray = [];
+        //  var query = Bmob.Query('unit');
+        query.find({
+            success: function (results) {
+                //  console.info(results);
+                //    alert("共查询到 " + results.length + " 条记录");
+                // 循环处理查询到的数据
+                for (var i = 0; i < results.length; i++) {
+                    var object = results[i];
+                    console.info(results[i].attributes);
+                    //        alert(object.id + ' - ' + object.get('playerName'));
+                    jsonArray[i] = results[i].attributes;
+                    console.info(jsonArray[i]["AreaType"]);
+                    jsonArray[i]["w2ui"] = { "style": "background-color: #98F5FF" };
+                    w2ui['myGrid'].add(results[i].attributes);
+                }
+            },
+            error: function (error) {
+                alert("查询失败: " + error.code + " " + error.message);
+            }
+        });
+        var jsonArray2 = JSON.stringify(jsonArray);
+        console.info(jsonArray);
+
+        var pstyle = 'background-color: #F5F6F7; border: 1px solid #dfdfdf; padding: 5px;';
+        var myLayout = $('#myLayout').w2layout({
+            name: 'myLayout',
+            panels: [
+                { type: 'top', size: 30 },
+                { type: 'left', size: 200, resizable: false },
+                { type: 'right', size: 300, resizable: false },
+                { type: 'main', content: 'main', style: pstyle }
+            ]
+        });
+
+        var rightLayout = $('#rightLayout').w2layout({
+            name: 'rightLayout',
+            panels: [
+                { type: 'top', size: 600 },
+                { type: 'main', content: 'main', style: pstyle }
+            ]
+        });
+
+      //  w2ui['myGrid'].add({ "recid": "11", "UPNo": "SJM", "FNo": "01", "UNo": "100", "UnitType": "RT", "UnitTypeDesc": "Retail", "UnitStartDate": "01/01/18", "UnitEndDate": "12/31/55", "AreaType": "GFA", "AreaTypeDesc": "Gross Floor Area", "UnitArea": "990.00" })
+
+        // set new content
+        //   w2ui['myLayout'].content('main', 'HTML content');
+        // set content as an object
+        w2ui['myLayout'].content('right', w2ui['rightLayout']);
+        w2ui['myLayout'].content('top', w2ui['toolbar']);
+
+        w2ui['rightLayout'].content('top', w2ui['myGrid']);
+        w2ui['rightLayout'].content('main', w2ui['grid2']);
+
+        w2ui['myLayout'].load('main', 'map.html');
+
+        // then define the sidebar
+        w2ui['myLayout'].content('left', $().w2sidebar({
+            name: 'sidebar',
+            img: null,
+            nodes: [
+                {
+                    id: 'Building1', text: 'SJM', img: 'icon-folder', expanded: true, group: true,
+                    nodes: [{ id: '01', text: 'Floor 1', img: 'icon-page' },
+                             { id: '02', text: 'Floor 2', img: 'icon-page' },
+                             { id: '03', text: 'Floor 3', img: 'icon-page' }
+                    ]
+                }
+            ],
+            onClick: function (event) {
+                console.info(event.target);
+           //     loadBlock(event.target);
+
+            }
+        }));
+    });
+
+    //菜单栏
+    $('#toolbar').w2toolbar({
+        name: 'toolbar',
+        items: [
+
+            { type: 'break', id: 'break0' },
+            {
+                type: 'check', id: 'Occupancy', caption: 'Occupancy', icon: 'icon-add',
+                onClick: function (event) {
+                    console.log('item ' + event.target + ' is clicked.');
+                    showOccupancy();
+        }
+            },
+            { type: 'spacer' },
+            {
+                type: 'check', id: 'item5', caption: 'Show Detail', icon: 'fa-home',
+                onClick: function (event) {
+                    //  $('#popup1').w2popup('open');
+                    /*
+                    w2popup.clear();
+                    w2popup.load({
+                        url: 'detail.html',
+                        showMax: true,
+                        width: 800,
+                        height: 600,
+                        onClose: function (event) { console.info("清除"); w2popup.clear(); },
+                    })
+                    */
+                    popup();
+                }
+            }
+        ]
+    });
+
+
+    //右数据菜单
+    $('#myGrid').w2grid({
+        name: 'myGrid',
+        show:{
+            toolbar: true,
+        },
+        columns: [
+            { field: 'UNo', caption: 'Unit Number', size: '30%' },
+            { field: 'UnitType', caption: 'Unit Type', size: '30%' },
+            { field: 'UnitArea', caption: 'Unit Area', size: '40%' },
+        ],
+        records: jsonArray,
+        onClick: function (event) {
+
+            var record = this.get(event.recid);
+            console.log(record.UNo);
+            selectFeatureByID(record.UNo);
+        }
+    });
+
+    //右下菜单
+    $('#grid2').w2grid({
+        header: 'Analysis',
+        show: { header: true, columnHeaders: true },
+        name: 'grid2',
+        columns: [
+           
+            { field: 'name', caption: 'Category', size: '100px' },
+            { field: 'area', caption: 'Area', size: '30%' },
+            { field: 'units', caption: 'Units', size: '30%' }
+        ]
+    });
+
+
+    function showOccupancy() {
+        w2ui['grid2'].clear();
+        vectorLayer.setStyle(oLayerStyleFunction);
+        //设置右下颜色
+        w2ui['grid2'].add([
+                  { recid: 0, name: 'Vancat', area: 50, units: 1, "w2ui": { "style": "background-color: rgba(0, 0 , 255, 0.5)" } },
+                  { recid: 1, name: 'Active', area: 200, units: 1, "w2ui": { "style": "background-color: rgba(255, 0 , 0, 0.5)" }},
+                  { recid: 2, name: 'Future', area: 300 , units: 9 , "w2ui": { "style": "background-color: rgba(255, 255 , 0, 0.5)" }}
+
+        ]);
+        //设置右边颜色
+        w2ui['myGrid'].clear();
+        for (var i = 0; i < jsonArray.length; i++) {
+            //    var object = results[i];
+            //    console.info(results[i].attributes);
+            //        alert(object.id + ' - ' + object.get('playerName'));
+       //     jsonArray[i] = results[i].attributes;
+            console.info(jsonArray[i]["UNo"]);
+            if (jsonArray[i]["UNo"] == "152") {
+                jsonArray[i]["w2ui"] = { "style": "background-color: rgba(0, 0 , 255, 0.5)" };
+            }
+            else if (jsonArray[i]["UNo"] == "201") {
+                jsonArray[i]["w2ui"] = { "style": "background-color: rgba(255, 0 , 0, 0.5)" };
+
+            }
+            else {
+                jsonArray[i]["w2ui"] = { "style": "background-color: rgba(255, 255 , 0, 0.5)" };
+            }
+            w2ui['myGrid'].add(jsonArray[i]);
+        }
+    }
+
+
+
+    //弹出详细信息
+    function popup() {
+       // w2popup.clear();
+        w2popup.open({
+            title: 'Popup Title',
+            body: '<div id="detailLayout" style="width: 100%; height: 100%;"></div>',
+            showMax: true,
+            width: 800,
+            height: 600,
+            onOpen: function (event) {
+                event.onComplete = function () {
+                    $('#w2ui-popup #detailLayout').w2render('detailLayout');
+                    w2ui['detailLayout'].content('top', w2ui['gridD0']);
+                    w2ui['detailLayout'].content('left', w2ui['gridD1']);
+                    w2ui['detailLayout'].content('main', w2ui['gridD2']);
+                };
+            },
+        });
+
+        $(function () {
+
+            var pstyle = 'border: 1px solid #dfdfdf; padding: 5px;';
+            $('#detailLayout').w2layout({
+                name: 'detailLayout',
+                panels: [
+                    { type: 'top', size: 200, style: pstyle, content: 'top' },
+                    { type: 'left', size: 300, style: pstyle, content: 'left' },
+                    { type: 'main', style: pstyle, content: 'main' }
+                ]
+            });
+
+
+
+            $('#gridD0').w2grid({
+                name: 'gridD0',
+                header: 'Detail',
+                show: { header: true },
+                columns: [
+                    { field: 'UPNo', caption: 'Property Code', size: '100px', sortable: true, attr: 'align=center' },
+                    { field: 'FNo', caption: 'Floor Number', size: '30%', sortable: true },
+                    { field: 'UNo', caption: 'Unit Code', size: '40%' },
+                    { field: 'ULNo', caption: 'Lease Number', size: '120px' },
+                    { field: 'LeaseStartDate', caption: 'Lease Start Date', size: '120px' },
+                    { field: 'LeaseEndDate', caption: 'Lease End Date', size: '120px' }
+                ],
+                records: [
+                    { recid: 1, UPNo: 'SJM', FNo: 'doe', UNo: '201', ULNo: '10001', LeaseStartDate: '2019/1/1', LeaseEndDate: '2021/12/31' },
+
+                ],
+                onClick: function (event) {
+                    w2ui['gridD2'].clear();
+                    var record = this.get(event.recid);
+                    w2ui['gridD2'].add([
+                        { recid: 0, name: 'Tennat ID', value: 'T10011' },
+                        { recid: 1, name: 'LegalName', value: 'NIKE' },
+                        { recid: 2, name: 'Sales Category Code', value: 'Fas' },
+                        { recid: 3, name: 'Sales Category Description', value: 'Fasion' },
+                        { recid: 4, name: 'Lease Start Date', value: '01/01/19' },
+                        { recid: 5, name: 'Lease End Date', value: '12/31/21' },
+                        { recid: 6, name: 'Charge Amount', value: '$500000' },
+                        { recid: 7, name: 'Charge Frequency', value: 'M' },
+                        { recid: 8, name: 'Charge Frequency Description', value: 'Monthly' }
+                    ]);
+
+                    w2ui['gridD1'].clear();
+                    var record = this.get(event.recid);
+                    w2ui['gridD1'].add([
+                        { recid: 0, name: 'Property Code', value: 'SJM' },
+                        { recid: 1, name: 'Property Name', value: 'SJM' },
+                        { recid: 2, name: 'Country', value: 'China' },
+                        { recid: 3, name: 'City', value: 'Macau' },
+                        { recid: 4, name: 'Address', value: "" }
+                    ]);
+
+                }
+            });
+
+            $('#gridD2').w2grid({
+                header: '',
+                show: { header: true, columnHeaders: false },
+                name: 'gridD2',
+                columns: [
+                    { field: 'name', caption: 'Name', size: '100px', style: 'background-color: #efefef; border-bottom: 1px solid white; padding-right: 5px;', attr: "align=right" },
+                    { field: 'value', caption: 'Value', size: '100%' }
+                ]
+            });
+
+
+            $('#gridD1').w2grid({
+                header: '',
+                show: { header: true, columnHeaders: false },
+                name: 'gridD1',
+                columns: [
+                    { field: 'name', caption: 'Name', size: '200px', style: 'background-color: #efefef; border-bottom: 1px solid white; padding-right: 5px;', attr: "align=left" },
+                    { field: 'value', caption: 'Value', size: '100%' }
+                ]
+            });
+
+            w2ui['gridD1'].add([
+                { recid: 0, name: 'Property Code', value: '' },
+                { recid: 1, name: 'Property Name', value: '' },
+                { recid: 2, name: 'Country:', value: '' },
+                { recid: 3, name: 'City', value: '' },
+                { recid: 4, name: 'Address', value: "" }
+            ]);
+
+            w2ui['gridD2'].add([
+                        { recid: 0, name: 'Tennat ID' },
+                        { recid: 1, name: 'LegalName' },
+                        { recid: 2, name: 'Sales Category Code' },
+                        { recid: 3, name: 'Sales Category Description' },
+                        { recid: 4, name: 'Lease Start Date' },
+                        { recid: 5, name: 'Lease End Date' },
+                        { recid: 6, name: 'Charge Amount' },
+                        { recid: 7, name: 'Charge Frequency' },
+                        { recid: 8, name: 'Charge Frequency Description' }
+            ]);
+
+        });
+    }
+
+
+
+
+
+
+
+</script>
 </html>
