--- a/new.html
+++ b/new.html
@@ -1,5 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?73fe9484215f10f4074889839c3e8c25";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+</script>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -240,16 +249,14 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Analysis <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="javascript:showOccupancy()">Occupancy</a></li>
-                  <li><a href="#">Sales category</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><a href="javascript:showLeaseExpiration()">Lease expiration</a></li>
+                  <li><a href="javascript:showSalesCategory()">Sales category/a></li>
                   <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li><a href="#">Other</a></li>
                        
                 </ul>
               </li>
-                    <li class="" > <form class="navbar-form navbar-left" role="search"><button id="showDetail" class="w2ui-btn" onclick="popupFunction()" disabled style="height:30px">Show Detail</button> </form></li>        
+                    <li class="" > <form class="navbar-form navbar-left" role="search"><button type="button" id="showDetail" class="w2ui-btn" onclick="popupFunction()" disabled style="height:30px">Show Detail</button> </form></li>        
             </ul>
 
  
@@ -258,7 +265,7 @@
               <div class="form-group">
                   <input id="asofdate" type="us-date">
               </div>
-              <button type="submit" class="btn btn-default">Set</button>
+              <button type="button" class="btn btn-default" onclick="#">Set</button>
             </form>
 
             </ul>
@@ -266,7 +273,6 @@
             </div><!-- /.container-fluid -->
           </nav>
         </div>
-      </nav>
       <div class="navbar-offset"></div>
       <div id="map" >
        <div id="popup" class="ol-popup">
@@ -350,7 +356,7 @@
       <div class="mini-submenu mini-submenu-right pull-right">
         <i class="fa fa-tasks"></i>
       </div>
-    </div>
+
   </body>
         <script type="text/javascript">
             Date.prototype.Format = function (fmt) { //author: meizz   
@@ -614,7 +620,7 @@
             //根据id选择地块
             function selectFeatureByID(UNo) {
 
-
+             
                 var features = vectorLayer.getSource().getFeatures();
                 console.info(features);
                 for (var i = 0; i < features.length; i++) {
